Refactor test method for better readability
Signed-off-by: Martin Gaievski <gaievski@amazon.com>